# log.c

./: .gitignore  CMakeLists.txt  README.md  color_example.c  example.c
examples/: color_example.c  color_full_example.c  example.c
include/: log.h.in
src/: log.c
